Añadir todos los dioses faltantes Corregir blur de los gifs en godView

--- a/ProyectoFinalVB.vbproj
+++ b/ProyectoFinalVB.vbproj
@@ -13,6 +13,18 @@
     <None Remove="Resources\Backgrounds\MayanYggdrasil.jpg" />
     <None Remove="Resources\Data\AhMuzenCab.txt" />
     <None Remove="Resources\Data\AhPuch.txt" />
+    <None Remove="Resources\Data\BolonDzacab.txt" />
+    <None Remove="Resources\Data\Camazotz.txt" />
+    <None Remove="Resources\Data\Chaac.txt" />
+    <None Remove="Resources\Data\EkChuah.txt" />
+    <None Remove="Resources\Data\Huracan.txt" />
+    <None Remove="Resources\Data\Itzamna.txt" />
+    <None Remove="Resources\Data\IxChel.txt" />
+    <None Remove="Resources\Data\IxTab.txt" />
+    <None Remove="Resources\Data\KinichAhau.txt" />
+    <None Remove="Resources\Data\KinichKakmo.txt" />
+    <None Remove="Resources\Data\Kukulkan.txt" />
+    <None Remove="Resources\Data\Pawahtun.txt" />
     <None Remove="Resources\Data\YumKaax.txt" />
     <None Remove="Resources\Fonts\aztek.ttf" />
     <None Remove="Resources\Fonts\Micro_Chat.ttf" />
@@ -35,6 +47,18 @@
     <EmbeddedResource Include="Resources\Backgrounds\MayanYggdrasil.jpg" />
     <EmbeddedResource Include="Resources\Data\AhMuzenCab.txt" />
     <EmbeddedResource Include="Resources\Data\AhPuch.txt" />
+    <EmbeddedResource Include="Resources\Data\BolonDzacab.txt" />
+    <EmbeddedResource Include="Resources\Data\Camazotz.txt" />
+    <EmbeddedResource Include="Resources\Data\Chaac.txt" />
+    <EmbeddedResource Include="Resources\Data\EkChuah.txt" />
+    <EmbeddedResource Include="Resources\Data\Huracan.txt" />
+    <EmbeddedResource Include="Resources\Data\Itzamna.txt" />
+    <EmbeddedResource Include="Resources\Data\IxChel.txt" />
+    <EmbeddedResource Include="Resources\Data\IxTab.txt" />
+    <EmbeddedResource Include="Resources\Data\KinichAhau.txt" />
+    <EmbeddedResource Include="Resources\Data\KinichKakmo.txt" />
+    <EmbeddedResource Include="Resources\Data\Kukulkan.txt" />
+    <EmbeddedResource Include="Resources\Data\Pawahtun.txt" />
     <EmbeddedResource Include="Resources\Data\YumKaax.txt" />
     <EmbeddedResource Include="Resources\Fonts\Aztek_Pixel.ttf" />
     <EmbeddedResource Include="Resources\Fonts\Micro_Chat.ttf" />
